--- a/src/app/footer/componente-pie-pagina/componente-pie-pagina.component.html
+++ b/src/app/footer/componente-pie-pagina/componente-pie-pagina.component.html
@@ -23,11 +23,11 @@
       <h5>Números de atención</h5>
       <ul class="list-unstyled">
         <li class="d-flex align-items-center mb-2">
-          <img src="icons/telefono.png" alt="Teléfono" class="icono-red me-2">
+          <img src="icons/telefono_contacto.png" alt="Teléfono" class="icono-red me-2">
           <a class="link-body-emphasis" href="tel:5919170915">5919 170 915</a>
         </li>
         <li class="d-flex align-items-center">
-          <img src="icons/telefono.png" alt="Teléfono" class="icono-red me-2">
+          <img src="icons/telefono_contacto.png" alt="Teléfono" class="icono-red me-2">
           <a class="link-body-emphasis" href="tel:5610903664">5610 903 664</a>
         </li>
       </ul>
