--- a/src/app/admin/componente-dashboard/componente-dashboard.component.html
+++ b/src/app/admin/componente-dashboard/componente-dashboard.component.html
@@ -89,7 +89,7 @@
             </ng-container>
 
             <!-- Precio -->
-            <ng-container matColumnDef="precio">
+           <!--  <ng-container matColumnDef="precio">
               <th mat-header-cell *matHeaderCellDef class="header-black"> Precio </th>
               <td mat-cell *matCellDef="let element">
                 <span class="badge text-bg-success">
@@ -97,7 +97,7 @@
 
               </span>
               </td>
-            </ng-container>
+            </ng-container> -->
 
             <!-- Acciones -->
             <ng-container matColumnDef="acciones">
