--- a/src/app/footer/componente-pie-pagina/componente-pie-pagina.component.html
+++ b/src/app/footer/componente-pie-pagina/componente-pie-pagina.component.html
@@ -1,6 +1,5 @@
 <div class="container">
   <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
-
     <div class="col mb-3"></div>
     <div class="col mb-3">
       <h5>Horarios de Atención</h5>
@@ -15,10 +14,6 @@
         </li>
       </ul>
     </div>
-
-
-
-
     <div class="col mb-3">
       <h5>Números de atención</h5>
       <ul class="list-unstyled">
@@ -32,9 +27,6 @@
         </li>
       </ul>
     </div>
-
-
-
     <div class="col mb-3">
       <h5>Encuentranos en nuestras redes sociales</h5>
       <ul class="list-unstyled d-flex redes-sociales">
@@ -51,7 +43,6 @@
           </a>
         </li>
       </ul>
-
       <div class="col mb-3">
         <img src="icons/Cocinas_Integrales_Monica.png" alt="Logo" width="60%" height="30%"
           class="figura d-inline-block">
@@ -59,9 +50,8 @@
       </div>
     </div>
   </footer>
-
   <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-    <p>Made by Ing. Kriling Jarid </p>
+    <p> <a class="perfilPersonal" href="https://krilingjaridcvprofesional.netlify.app/" target="_blank"> Realizado por: Ing. Kriling Jarid </a></p>
     <ul class="list-unstyled d-flex">
       <li class="ms-3"><a class="link-body-emphasis" href="https://www.instagram.com/cocintra_monica/"
           aria-label="Instagram"><i class="bi bi-instagram"></i></a>
