--- a/src/app/admin/componente-navegacion/componente-navegacion.component.html
+++ b/src/app/admin/componente-navegacion/componente-navegacion.component.html
@@ -98,9 +98,21 @@
     </li>
 
     <hr />
-    <li><a class="dropdown-item" routerLink="/admin/categorias/listar">Listado de Categorias</a></li>
+    <li>
+      <div class="d-flex gap-2">
+        <img src="icons/nuevo-producto.png" style="border-radius: 30px; width: 50px; height: 40px;" alt="">
+        <a class="dropdown-item" routerLink="/admin/categorias/listar">Listado de Categorias</a>
+      </div>
+    </li>
     <hr />
-    <li><a class="dropdown-item" routerLink="/admin/categorias/registro">Registro de categorias</a></li>
+    <li>
+
+      <div class="d-flex gap-2">
+        <img src="icons/nuevo-producto.png" style="border-radius: 30px; width: 50px; height: 40px;" alt="">
+        <a class="dropdown-item" routerLink="/admin/categorias/registro">Registro de categorias</a>
+      </div>
+
+    </li>
 
   </ul>
 
@@ -112,7 +124,7 @@
       <strong>Configuración</strong>
     </a>
     <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-      <li><a class="dropdown-item" >Perfil</a></li>
+      <li><a class="dropdown-item">Perfil</a></li>
       <li>
         <hr class="dropdown-divider" />
       </li>
