Se suben cambios nuevos de front

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,10 +1,20 @@
-<div class="d-flex">
+<!-- <div class="d-flex"> -->
+
+<div>
   <!-- Sidebar -->
   <app-componente-navegacion></app-componente-navegacion>
 
   <!-- Contenido dinámico -->
-  <div class="flex-grow-1 p-4 bg-light">
+  <!--  <div class="flex-grow-1 p-4 bg-light">
+    <router-outlet></router-outlet>
+  </div> -->
+
+  <div>
     <router-outlet></router-outlet>
   </div>
-</div>
 
+
+<!--   <app-componente-footer/> -->
+
+
+</div>
