--- a/src/app/admin/componente-categorias/componete-editar-categorias/componete-editar-categorias.component.html
+++ b/src/app/admin/componente-categorias/componete-editar-categorias/componete-editar-categorias.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content class="mat-typography p-3">
-  <h4>Editar la Categoria <i>"{{categoria.nombreCategoria}}"</i></h4>
+  <h4>Editar la Categoria <i>"{{data.categoria.nombreCategoria}}"</i></h4>
   <form [formGroup]="categoriaForm" class="product-form">
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Nombre de la categoria</mat-label>
