--- a/src/app/paginaInicial/home/home.component.html
+++ b/src/app/paginaInicial/home/home.component.html
@@ -218,6 +218,15 @@
     </div>
   </section>
 
+  
+  <section>
+    <div class="container mt-5">
+      <hr class="featurette-divider" />
+      <app-componente-para-videos />
+    </div>
+  </section>
+
+
   <section id="Provedores">
     <div class="container mt-4">
       <hr class="featurette-divider" />
