--- a/src/app/admin/componente-dashboard/componente-dashboard.component.html
+++ b/src/app/admin/componente-dashboard/componente-dashboard.component.html
@@ -104,9 +104,11 @@
               <th mat-header-cell *matHeaderCellDef class="header-black"> Acciones </th>
               <td mat-cell *matCellDef="let element">
                 <div class="d-flex gap-2">
-                  <button class="btn btn-warning" (click)="updateProduct(element)"><i class="bi bi-pen"></i></button>
-                  <button class="btn btn-danger" (click)="deleteProduct(element)"><i
-                      class="bi bi-trash-fill"></i></button>
+                  <button class="btn btn-warning" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Tooltip on top"
+                   (click)="updateProduct(element)"><i class="bi bi-pen"></i></button>
+
+                  <button class="btn btn-danger" (click)="deleteProduct(element)">
+                    <i class="bi bi-trash-fill"></i></button>
                 </div>
               </td>
             </ng-container>
