--- a/src/app/admin/componente-navegacion/componente-navegacion.component.html
+++ b/src/app/admin/componente-navegacion/componente-navegacion.component.html
@@ -1,63 +1,43 @@
-<!-- <nav class="navbar navbar-expand-lg bg-light shadow">
+<nav class="navbar navbar-expand-lg bg-light shadow-lg colorPrimario">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/admin/" routerLinkActive="active">Bienvenido: <strong> {{nombreUsuario}}
+    <a class="navbar-brand claseNueva" type="button" routerLink="/admin/">Bienvenido: <strong> {{nombreUsuario}}
       </strong></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button style="background-color: rgb(255, 255, 255);" class="navbar-toggler" type="button"
+    data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+      aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
+    <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle claseNueva" href="#" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
             Gestion Productos
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" routerLink="/admin/dashboard">Listado de Productos</a></li>
             <li><a class="dropdown-item" routerLink="/admin/productos/registro">Registro de Productos</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
-
-
-
-
-
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle claseNueva" href="#" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
             Gestion Categorias
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" routerLink="/admin/categorias/listar">Listado de Categorias</a></li>
             <li><a class="dropdown-item" routerLink="/admin/categorias/registro">Registro de categorias</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
-
-
-
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
       </ul>
+      <!-- <div class="dropdown">
 
-
-
-
-      <div class="dropdown">
-        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
-          aria-expanded="false">
-          <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+        <a class="d-block link-dark text-decoration-none dropdown-toggle" style="background-color: #FF0000;"
+          data-bs-toggle="dropdown" aria-expanded="false">
+          <img src="icons/adminUser.png" alt="" width="32" height="32" style="border: 1px solid rgb(39, 39, 39);"
+            class="rounded-circle me-2" />
         </a>
+
         <ul class="dropdown-menu dropdown-menu-end text-small shadow">
           <li><a class="dropdown-item" href="#">Perfil</a></li>
           <li><a class="dropdown-item" href="#">Settings</a></li>
@@ -67,12 +47,27 @@
           </li>
           <li><a type="button" class="dropdown-item" (click)="questionUser()">Cerrar Sesión</a></li>
         </ul>
+      </div> -->
+
+      <!-- Example single danger button -->
+      <div class="btn-group">
+        <button type="button" class="btn btn-primary d-block text-decoration-none dropdown-toggle claseBoton"
+        data-bs-toggle="dropdown" aria-expanded="false">
+          <img src="icons/adminUser.png" alt="" width="32" height="32" style="border: 1px solid rgb(39, 39, 39);"
+            class="rounded-circle me-2" />Configuración
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end text-small shadow-lg">
+          <li><a class="dropdown-item" routerLink="/admin/miPerfil">Mi Perfil</a></li>
+          <li><a class="dropdown-item" style="color: red; " type="button" (click)="questionUser()">Cerrar Sesión</a></li>
+        </ul>
       </div>
+
+
     </div>
   </div>
 </nav>
- -->
-<div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; height: 100vh;">
+
+<!-- <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; height: 100vh;">
   <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
     <img src="icons/admin.png" style="border-radius: 30px; width: 50px; height: 40px;" alt="">
     <a class="navbar-brand" routerLink="/admin/" routerLinkActive="active">Bienvenido: <strong> {{nombreUsuario}}
@@ -131,4 +126,4 @@
       <li><a class="dropdown-item" type="button" (click)="questionUser()">Cerrar Sesión</a></li>
     </ul>
   </div>
-</div>
+</div> -->
