--- a/src/app/paginaInicial/home/home.component.html
+++ b/src/app/paginaInicial/home/home.component.html
@@ -69,8 +69,8 @@
           <div class="col-md-6">
             <div class="card-body">
               <h2 class="contact-container">¿QUÉ HACEMOS?</h2>
-              <p class="card-text">
-                En <strong> Cocinas Integrales Mónica </strong> nos especializamos en la fabricación de cocinas
+              <p class="card-text" style="text-align: justify;">
+                En <strong> <i> Cocinas Integrales Mónica </i> </strong> nos especializamos en la fabricación de cocinas
                 integrales, closets y puertas para interiores,
                 además de ofrecer una alta gama de accesorios para optimizar y personalizar tus espacios. Nos
                 caracterizamos por trabajar
@@ -218,7 +218,7 @@
     </div>
   </section>
 
-  
+
   <section>
     <div class="container mt-5">
       <hr class="featurette-divider" />
