--- a/src/app/shared/pie-de-pagina/pie-de-pagina.component.html
+++ b/src/app/shared/pie-de-pagina/pie-de-pagina.component.html
@@ -19,11 +19,11 @@
       <ul class="list-unstyled">
         <li class="d-flex align-items-center mb-2">
           <img src="icons/telefono_contacto.png" alt="Teléfono" class="icono-red me-2">
-          <a class="link-body-emphasis" href="tel:5919170915">5919 170 915</a>
+          <a class="numeroContacto" href="tel:5919170915">5919 170 915</a>
         </li>
         <li class="d-flex align-items-center">
           <img src="icons/telefono_contacto.png" alt="Teléfono" class="icono-red me-2">
-          <a class="link-body-emphasis" href="tel:5610903664">5610 903 664</a>
+          <a class="numeroContacto" href="tel:5610903664">5610 903 664</a>
         </li>
       </ul>
     </div>
@@ -46,12 +46,12 @@
       <div class="col mb-3">
         <img src="icons/Cocinas_Integrales_Monica.png" alt="Logo" width="60%" height="30%"
           class="figura d-inline-block">
-        <p class="text-body-secondary">&copy; 2025 Derechos recervados</p>
+        <p class="text-body-secondary">&copy; Última Actualización 2025 Derechos reservados</p>
       </div>
     </div>
   </footer>
   <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-    <p> <a class="perfilPersonal" href="https://krilingjaridcvprofesional.netlify.app/" target="_blank"> Realizado por: Ing. Kriling Jarid </a></p>
+    <p> <a class="perfilPersonal" href="https://krilingjaridcvprofesional.netlify.app/" target="_blank"> Realizado por: Ing. Kriling Jarid G.E</a></p>
     <ul class="list-unstyled d-flex">
       <li class="ms-3"><a class="link-body-emphasis" href="https://www.instagram.com/cocintra_monica/"
           aria-label="Instagram"><i class="bi bi-instagram"></i></a>
@@ -62,3 +62,4 @@
     </ul>
   </div>
 </div>
+
