--- a/src/app/admin/componente-categorias/componete-editar-categorias/componete-editar-categorias.component.html
+++ b/src/app/admin/componente-categorias/componete-editar-categorias/componete-editar-categorias.component.html
@@ -12,10 +12,10 @@
 
     <!-- Botones -->
     <div class="d-flex justify-content-end mt-4 gap-2">
-      <button class="btn btn-warning" (click)="editarCategoria()" [disabled]="categoriaForm.invalid">
+      <button class="botonEditar" (click)="editarCategoria()" [disabled]="categoriaForm.invalid">
         Actualizar Categoria
       </button>
-      <button class="btn btn-danger" color="primary" (click)="cerrar()">Cerrar</button>
+      <button class="botonEliminar" color="primary" (click)="cerrar()">Cerrar</button>
 
     </div>
   </form>
