--- a/src/app/admin/componente-categorias/componete-tabla-categorias/componete-tabla-categorias.component.html
+++ b/src/app/admin/componente-categorias/componete-tabla-categorias/componete-tabla-categorias.component.html
@@ -70,8 +70,8 @@
                   <th mat-header-cell *matHeaderCellDef class="header-black"> Acciones </th>
                   <td mat-cell *matCellDef="let element">
                     <div class="d-flex gap-2">
-                      <button class="btn btn-warning" (click)="updateCategoria(element)"><i class="bi bi-pen"></i></button>
-                      <button class="btn btn-danger" (click)="deleteCategoria(element)"><i
+                      <button class="botonEditar" (click)="updateCategoria(element)"><i class="bi bi-pen"></i></button>
+                      <button class="botonEliminar" (click)="deleteCategoria(element)"><i
                           class="bi bi-trash-fill"></i></button>
                     </div>
                   </td>
