--- a/src/app/admin/componente-dashboard/componente-dashboard.component.html
+++ b/src/app/admin/componente-dashboard/componente-dashboard.component.html
@@ -104,10 +104,10 @@
               <th mat-header-cell *matHeaderCellDef class="header-black"> Acciones </th>
               <td mat-cell *matCellDef="let element">
                 <div class="d-flex gap-2">
-                  <button class="btn btn-warning" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Tooltip on top"
+                  <button class="estiloBotonTabla1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Tooltip on top"
                    (click)="updateProduct(element)"><i class="bi bi-pen"></i></button>
 
-                  <button class="btn btn-danger" (click)="deleteProduct(element)">
+                  <button class="estiloBotonTabla2" (click)="deleteProduct(element)">
                     <i class="bi bi-trash-fill"></i></button>
                 </div>
               </td>
