--- a/src/app/paginaInicial/home/home.component.html
+++ b/src/app/paginaInicial/home/home.component.html
@@ -11,13 +11,12 @@
         <img src="icons/cocina_1.png" alt="Cocina 1" class="imagen-carrusel">
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
+            <h1>Cocina estilo isla, color gris mate.</h1>
             <p class="opacity-75">
-              Some representative placeholder content for the first slide of
-              the carousel.
+              Puertas de alacena en altobrillo, todo el material es construido con MDF.
             </p>
             <p>
-              <a class="btn btn-lg btn-primary" href="#">Sign up today</a>
+              <a class="btn btn-lg btn-primary" href="#Productos">Ver más productos</a>
             </p>
           </div>
         </div>
@@ -26,12 +25,12 @@
         <img src="icons/cocina_6.png" alt="Cocina 6" class="imagen-carrusel">
         <div class="container">
           <div class="carousel-caption">
-            <h1>Another example headline.</h1>
+            <h1>Mesas para restaurante.</h1>
             <p>
-              Some representative placeholder content for the second slide
-              of the carousel.
+              Creacion de mesas para 4 personas de ambiente de restaurante todo
+              construido con madera de pino.
             </p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+            <p><a class="btn btn-lg btn-primary" href="#Productos">Ver más productos</a></p>
           </div>
         </div>
       </div>
@@ -39,13 +38,13 @@
         <img src="icons/cocina_4.png" alt="Cocina 4" class="imagen-carrusel">
         <div class="container">
           <div class="carousel-caption text-end">
-            <h1>One more for good measure.</h1>
+            <h1>Cocina de estilo rustico para hogar.</h1>
             <p>
-              Some representative placeholder content for the third slide of
-              this carousel.
+              Cocina diseñada de tipo "L" integrada con su isla adicional, color de material chocolate
+              con acabado amaderado.
             </p>
             <p>
-              <a class="btn btn-lg btn-primary" href="#">Browse gallery</a>
+              <a class="btn btn-lg btn-primary" href="#Productos">Ver más productos</a>
             </p>
           </div>
         </div>
