--- a/src/app/shared/componente-navbar/componente-navbar.component.css
+++ b/src/app/shared/componente-navbar/componente-navbar.component.css
@@ -1,13 +1,36 @@
-.figura{
+.figura {
   border-radius: 10px 10px 10px 10px;
 }
-
 
 .nav-link,
 .navbar-brand {
   cursor: pointer !important;
 }
 
+.enlacesPrincipales:hover {
+  color: rgb(0, 153, 255);
+  text-decoration: underline;
+}
 
+.botonConfiguracion {
+  background-color: #0d6efd;
+  color: white;
+  border-radius: 10px;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s ease; /* Suaviza la animación */
 
+}
 
+.botonConfiguracion:hover {
+  transform: translateY(-3px); /* Se eleva */
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25); /* Sombra realista */
+
+}
+
+.botonConfiguracion:active {
+  transform: translateY(0px);
+  box-shadow: 0px 3px 6px rgba(0,0,0,0.20);
+
+}
