--- a/src/app/shared/componente-navbar/componente-navbar.component.html
+++ b/src/app/shared/componente-navbar/componente-navbar.component.html
@@ -1,8 +1,8 @@
 <header data-bs-theme="dark">
-  <nav id="navbar-example2" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow">
+  <nav id="navbar-example2" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow-lg">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
-        <img src="icons/Cocinas_Integrales_Monica.png" alt="Logo" width="50%" height="30%"
+        <img src="icons/Cocinas_Integrales_Monica.png" alt="Logo" width="56%" height="30%"
           class="figura d-inline-block">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
@@ -12,30 +12,31 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/">Inicio</a>
+            <a class="nav-link active enlacesPrincipales" aria-current="page" routerLink="/">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#que-hacemos">¿Qué hacemos?</a>
+            <a class="nav-link active enlacesPrincipales" aria-current="page" href="#que-hacemos">¿Qué hacemos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#Provedores">Nuestros Provedores</a>
+            <a class="nav-link active enlacesPrincipales" aria-current="page" href="#Provedores">Nuestros Provedores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#Productos">Nuestros Productos</a>
+            <a class="nav-link active enlacesPrincipales" aria-current="page" href="#Productos">Nuestros Productos</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#Adquiere">Adquiere tu Cocina</a>
+            <a class="nav-link active enlacesPrincipales" aria-current="page" href="#Adquiere">Adquiere tu Cocina</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link active enlacesPrincipales" aria-current="page" href="#Ubicacion">Ubicación</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#Contacto">Contacto</a>
+            <a class="nav-link active enlacesPrincipales" aria-current="page" href="#Contacto">Contáctanos</a>
           </li>
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#Ubicacion">Ubicación</a>
-          </li>
+
         </ul>
         <button class="btn btn-outline-primary" routerLink="/login" routerLinkActive="active"
-          ariaCurrentWhenActive="page">Iniciar sesion</button>
+          ariaCurrentWhenActive="page">Iniciar sesión</button>
       </div>
     </div>
   </nav>
